--- a/css/style.css
+++ b/css/style.css
@@ -400,4 +400,13 @@ body .container {
 .contacts__seller {
   font-size: 16px;
   font-style: italic;
+}
+.contacts__btn {
+  display: block;
+  margin: 15px auto;
+  width: 280px;
+  height: 50px;
+  background-color: beige;
+  font-size: 20px;
+  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
