--- a/css/style.scss
+++ b/css/style.scss
@@ -429,5 +429,14 @@ body {
     font-style: italic;
 
   }
+  &__btn{
+    display: block;
+    margin: 15px auto;
+    width: 280px;
+    height: 50px;
+    background-color: beige;
+    font-size: 20px;
+    font-weight: 500;
+  }
 }
 
